# remote

./: CMakeLists.txt  aa  ab
center/: center_server.cpp  center_server.h
gateway/: CMakeLists.txt  myepoll.cpp  myepoll.h
head/: pb_total.h  shares.h
head/lua/: lua.hpp
head/openssl/: configuration.h
head/pb2/: sqlop.pb.h
head/zxx_common/: big_info.h  center.h  common.h  config_read.h  delay.h  lua_module.h  macro.h  openssl_operate.h  random_file.h  times.h  tool_common.h  tools2.h
login/: common_main.cpp  common_main.h  common_recv.cpp  common_recv.h  common_s.h  common_send.cpp  common_send.h  run.cpp  run.h
pbfile/: aa  protoc-27.0.0  sqlop.proto
pbfile/pbout/: sqlop.pb.h
pbout/: CMakeLists.txt  sqlop.pb.cc
script/: common.lua  config.lua
